# bitcoin_r1cs

./: Cargo.toml  README.md
docs/: tx.md
src/: lib.rs  traits.rs
src/constraints/: hash256.rs  mod.rs  outpoint.rs  script.rs  sighash_cache.rs  tx.rs  txin.rs  txout.rs
src/util/: mod.rs
